--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -1,45 +1,95 @@
-    
-    {% extends 'base.html' %}
 
-    {% block contents %}
-    
-    <body>
-    <br>
-    {% for blog in posts %}
+{% extends 'base.html' %}
 
+{% block contents %}
+
+  <body>
+   
+<main role="main">
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+
+      <div class="carousel-item active">
+         <svg class="bd-placeholder-img" width="100%" height="30%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
         <div class="container">
-        <div class="card" ">
-            <div class="card-body">
-              <h2 class="card-title">{{blog.title}}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_date}}</h6>
-              <p class="card-text">{{blog.summary}}</p>
-              <a href="{% url 'detail' blog.id %}" class="card-link">...more</a>
-              
-            </div>
+          <div class="carousel-caption ">
+            <h1>김민영의 블로그.</h1>
+            <p>김민영의 블로그 입니다.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
           </div>
+        </div>
       </div>
-
-        
-      {%endfor%}
-
-      <div class = "container">
-      {#first previous#}
-      {%if posts.has_previous%}
-      <a href="?page=1">First</a>
-      <a href="?page={{posts.previous_page_number}}">Previous</a>
-      {%endif%}
-      {# 3of 4#}
-      <span>{{posts.number}}</span>
-      <span>of</span>
-      <span>{{posts.paginator.num_pages}}</span>
-
-      {%if posts.has_next%}
-      {# Next Last #}
-      <a href="?page={{posts.next_page_number}}">Next</a>
-      <a href="?page={{posts.paginator.num_pages}}">Last</a>
-      {%endif%}
+      <div class="carousel-item">
+        <svg class="bd-placeholder-img" width="100%" height="30%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>구경하고 싶나요?.</h1>
+            <p>배포도 하고나니 신기하네요.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <svg class="bd-placeholder-img" width="100%" height="30%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+        <div class="container">
+          <div class="carousel-caption ">
+            <h1>구경하세요.</h1>
+            <p>만드는게 재밌어요.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+          </div>
+        </div>
+      </div>
     </div>
-     
-</body>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
-{% endblock %}
+
+  <!-- Marketing messaging and featurettes
+  ================================================== -->
+  <!-- Wrap the rest of the page in another container to center all the content. -->
+
+  <br>
+  <div class="container marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-lg-4">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <h2>융프라우</h2>
+        <p>스위스 융프라우를 갔었는데</p>
+        
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <h2>융프라우2</h2>
+        <p>한번 더 가고 싶어졌어요.</p>
+        
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <h2>융프라우3</h2>
+        <p>너무 이뻐서.</p>
+        
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+
+
+
+  </div>
+    <!-- START THE FEATURETTES -->
+
+      {% endblock %}
