--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -17,9 +17,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="navbar-nav">
         
-            
               <a class="nav-item nav-link" href="{% url 'home' %}">Blog</a>
-              <a class="nav-item nav-link" href="{% url 'new' %}">글쓰기</a>
+              <a class="nav-item nav-link" href="{% url 'memory' %}">글보기</a>
+              <a class="nav-item nav-link" href="{% url 'newblog' %}">글쓰기</a>
               <a class="nav-item nav-link" href="{% url 'portfolio' %}">Portfolio</a>
               <a class="nav-item nav-link" href="{% url 'signup' %}">회원가입</a>
               <a class="nav-item nav-link" href="{% url 'login' %}">로그인</a>
